--- a/css/base.css
+++ b/css/base.css
@@ -34,6 +34,19 @@
   --glass-border: rgba(255, 255, 255, 0.08);
 }
 
+/* Screen-reader only utility */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 /* Base Reset */
 * {
   box-sizing: border-box;
