--- a/css/rankings.css
+++ b/css/rankings.css
@@ -345,7 +345,7 @@
 .content-area {
   width: 100%;
   min-width: 0;
-  padding: 0 2.5rem 2rem;
+  padding: 1rem 2.5rem 2rem;
 }
 
 /* Talent sidebar */
