--- a/css/guide.css
+++ b/css/guide.css
@@ -250,7 +250,7 @@
 }
 
 .talent-explain-name a {
-  color: #ffd100;
+  color: #ffd100 !important;
   text-decoration: none;
 }
 
@@ -266,7 +266,7 @@
 }
 
 .talent-tier-text p a {
-  color: #ffd100;
+  color: #ffd100 !important;
   font-weight: 700;
   text-decoration: none;
 }
@@ -421,7 +421,7 @@
 }
 
 .boss-tips a[href*="/spell="] {
-  color: #ffd100;
+  color: #ffd100 !important;
   font-weight: 700;
   text-decoration: none;
 }
@@ -443,7 +443,7 @@
 }
 
 .boss-rules a {
-  color: #ffd100;
+  color: #ffd100 !important;
   font-weight: 700;
   text-decoration: none;
 }
