--- a/css/guide.css
+++ b/css/guide.css
@@ -856,7 +856,10 @@
   text-decoration: underline;
 }
 
-.stat-bar-caption a ins {
+.stat-bar-caption a ins,
+.stat-bar-caption a del {
+  text-decoration: none;
+  border: 0;
   margin-right: 0.25em;
 }
 
